@@ -560,10 +560,10 @@ class t3lib_pageSelect {
 				}
 
 				$statusCode = intval($row['redirectHttpStatusCode']);
-				if ($statusCode && defined('t3lib_div::HTTP_STATUS_' . $statusCode)) {
-					t3lib_div::redirect($redirectUrl, constant('t3lib_div::HTTP_STATUS_' . $statusCode));
+				if ($statusCode && defined('t3lib_utility_Http::HTTP_STATUS_' . $statusCode)) {
+					t3lib_utility_Http::redirect($redirectUrl, constant('t3lib_utility_Http::HTTP_STATUS_' . $statusCode));
 				} else {
-					t3lib_div::redirect($redirectUrl, 't3lib_div::HTTP_STATUS_301');
+					t3lib_utility_Http::redirect($redirectUrl, 't3lib_utility_Http::HTTP_STATUS_301');
 				}
 				exit;
 			} else {
