@@ -105,12 +105,12 @@ class tx_simulatestatic {
 					$parentObject->pageUnavailableAndExit('PATH_INFO was not configured for this website, and the URL tries to find the page by PATH_INFO!');
 				} else {
 					$message = 'PATH_INFO was not configured for this website, and the URL tries to find the page by PATH_INFO!';
-					header(t3lib_div::HTTP_STATUS_503);
+					header(t3lib_utility_Http::HTTP_STATUS_503);
 					t3lib_div::sysLog($message, 'cms', t3lib_div::SYSLOG_SEVERITY_ERROR);
 					$parentObject->printError($message.'<br /><br /><a href="' . htmlspecialchars($redirectUrl) . '">Click here to get to the right page.</a>','Error: PATH_INFO not configured');
 				}
 			} else {
-				t3lib_div::redirect($redirectUrl);
+				t3lib_utility_Http::redirect($redirectUrl);
 			}
 			exit;
 			// Set no_cache if PATH_INFO is NOT used as simulateStaticDoc.
