@@ -1,3 +1,7 @@
+2009-11-18  Benjamin Mack  <benni@typo3.org>
+
+	* Fixed bug #12648: Introduce t3lib_utility_Http for all related constants and make the core aware of these changes (patch by Ingo Renner)
+
 2009-11-17  Rupert Germann  <rupi@gmx.li>
 
 	* Fixed bug #12455: OpenID authentication does not work with PHP 5.3
